# docs/swagger.yaml
@@ -196,11 +196,17 @@ definitions:
     type: object
   model.CourseInfo:
     properties:
-      comment:
+      content:
         type: string
-      comment_course_id:
-        type: integer
       course_name:
+        type: string
+      evaluation_id:
+        type: integer
+      parent_comment_id:
+        type: string
+      sid:
+        type: string
+      teacher:
         type: string
     type: object
   model.EvaluationInfo:
